--- a/Simulation/Utils/Pipfile
+++ b/Simulation/Utils/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 
 [packages]
 editdistance = "*"
+scikit-learn = "*"
+numpy = "*"
+matplotlib = "*"
 
 [requires]
 python_version = "3.8"
